--- a/locofy.config.json
+++ b/locofy.config.json
@@ -3,5 +3,6 @@
         "./components/ui/button.tsx",
         "./components/ui/checkbox.tsx",
         "./components/ui/searchInput.tsx"
-    ]
+    ],
+    "wrapper": "./components/Wrapper.tsx"
 }
